# Web-app-for-db

./: CMakeLists.txt  README.md
frontend/static/: index.html  script.js  style.css
include/db/: Database.hpp
include/server/: Server.hpp
src/: main.cpp
src/db/: Database.cpp
src/server/: Server.cpp
